# cerevoice_tts

./: .gitignore  Readme.md
cerevoice_tts/: CMakeLists.txt  package.xml
cerevoice_tts/include/cerevoice_tts/: CerevoiceTts.h
cerevoice_tts/launch/: tts.launch
cerevoice_tts/scripts/: txt2speech
cerevoice_tts/src/: CerevoiceTts.cpp  cerevoice_tts_node.cpp
cerevoice_tts/test/: test_cerevoice_tts.cpp
cerevoice_tts_msgs/: CMakeLists.txt  package.xml
cerevoice_tts_msgs/action/: Tts.action
