<?xml version="1.0"?>
<package>
  <name>cerevoice_tts</name>
  <version>1.0.0</version>
  <description>The cerevoice_tts package uses the CereProc CereVoice TTS engine to synthesise speech.</description>

  <maintainer email="reineben@hs-weingarten.de">Benjamin Reiner</maintainer>

  <license>BSD</license>

  <url type="repository">http://141.69.58.11/ros/vocon_asr</url>

  <author >Benjamin Reiner</author>
  
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cerevoice_tts_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cerevoice_sdk</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cerevoice_tts_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cerevoice_sdk</run_depend>

</package>
