<?xml version="1.0"?>
<package>
  <name>cerevoice_tts_msgs</name>
  <version>1.0.0</version>
  <description>The cerevoice_tts_msgs package defines an action to let the robot speak.</description>

  <maintainer email="reineben@hs-weingarten.de">Benjamin Reiner</maintainer>

  <license>BSD</license>

  <url type="repository">http://141.69.58.11/ros/cerevoice_tts.git</url>

  <author email="reineben@hs-weingarten.de">Benjamin Reiner</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
